trash/minikube-processing/DeploymentSplunk.yml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: splunk
    namespace: splunk-ns
    labels:
        app: splunk
spec:
    replicas: 1
    selector:
        matchLabels:
            app: splunk
    template:
        metadata:
            annotations:
                sidecar.istio.io/inject: 'false'
            labels:
                app: splunk
        spec:
            containers:
                -   name: splunk
                    image: 'splunk/splunk:latest'
                    imagePullPolicy: IfNotPresent
                    ports:
                        -   containerPort: 8000
