trash/minikube-processing/Service.yml
apiVersion: v1
kind: Service
metadata:
    name: processing-service
    namespace: default
    labels:
        app: processing
spec:
    type: NodePort
    selector:
        app: processing
    ports:
        - port: 8080
          name: http
          protocol: TCP
