trash/minikube-processing/Gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
    name: ingress-gateway
spec:
    servers:
        - port:
              number: 80
              name: ingress.http
              protocol: HTTP
          hosts:
              - processing.com
