trash/minikube-processing/DesitnationRuleEgress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: egressgateway-for-bootcom
    namespace: default
spec:
    host: istio-egressgateway.istio-system.svc.cluster.local
    subsets:
        - name: egressgateway
