trash/minikube-processing/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: processing-virtual-service
    namespace: default
spec:
    hosts:
        - processing.com
    gateways:
        - ingress-gateway
    http:
        - route:
              - destination:
                    host: processing-service.default.svc.cluster.local
                    port:
                        number: 8080
