trash/minikube-processing/VirtualServiceEgress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bootcom
  namespace: default
  labels:
    app: "egress"
spec:
  hosts:
    - boot.com
  tls:
    - match:
        - port: 443
          sniHosts:
            - boot.com
      route:
        - destination:
            host: boot.com
            port:
              number: 443
          weight: 100

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-bootcom-though-egress-gateway
  namespace: default
  labels:
    app: "egress"
spec:
  hosts:
    - boot.com
  gateways:
    - istio-egressgateway
    - mesh
  http:
    - match:
        - gateways:
            - mesh
          port: 80
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            port:
              number: 443
          weight: 100
    - match:
        - gateways:
            - istio-egressgateway
          port: 443
      route:
        - destination:
            host: boot.com
            port:
              number: 443
          weight: 100
